--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -65,7 +65,7 @@
             </table>
         </main>
         <footer>
-            <p>&copy; 2024 TechCon. All rights reserved.</p>
-        </footer>
+        <p>&copy; 2024 TechCon. All right reserved.</p>
+    </footer>
     </body>
 </html>
