update footer copyright content

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -12,7 +12,7 @@
             <a href="index.html">Home</a>
             <a href="schedule.html">Schedule</a>
             <a href="register.html">Register</a>
-            <a href="conatct.html">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <main>
@@ -34,7 +34,7 @@
             </article>
     </main>
     <footer>
-        <p>&copy; 2024 TechCon. All right reserved.</p>
-    </footer>
+    <p>Copyright &copy; 2024 TechCon. All rights reserved.</p>
+</footer>
 </body>
 </html>
