--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -26,7 +26,7 @@
          </section>
         </main>
         <footer>
-            <p>&copy; 2024 TechCon. All right reserved.</p>
+    <p>Copyright &copy; 2024 TechCon. All rights reserved.</p>
         </footer>
     </body>
 </html>
