update message form

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -42,7 +42,7 @@
                             <input type="email" id="email" name="email" required><br><br>
 
                             <label for="message">Message:</label>
-                            <input type="text" id="message" name="message" required><br><br>
+                             <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
 
                             <button type="submit">Send Message</button>
                         </form>
