--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -64,8 +64,8 @@
                 </tbody>
             </table>
         </main>
-       <footer>
-    <p>Copyright © 2024 TechCon. All rights reserved.</p>
+        <footer>
+    <p>Copyright &copy; 2024 TechCon. All rights reserved.</p>
         </footer>
     </body>
 </html>
